--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Add the call to init() as an onload so it will only run once the page is loaded -->
   <body onload="init()">
     <div id="container-div" style="width: 400px; height: 800px;"></div>
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       var containerDiv = document.getElementById("container-div");
       var instanceURL = "https://caresphere-communication.my.connect.aws/ccp-v2/";
       // initialize the streams api
@@ -52,6 +52,6 @@
           ccpLoadTimeout: 10000 //optional, defaults to 5000 (ms)
         });
       }
-    </script>
+    </script> -->
   </body>
 </html>
