--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <script type="text/javascript" src="connect-streams-min.js"></script>
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="./connect-streams-min.js"></script>
+    <!-- <script type="text/javascript" src="./index.js"></script> -->
   </head>
   <!-- Add the call to init() as an onload so it will only run once the page is loaded -->
   <body onload="init()">
